> Major user interface redesign for the-ramp and forces-and-motion (replacing forces-1d) 
Bugfix in specifying bounds in PNode.toImage call, improves compatibility with Piccolo 1.3
# 1.03.56 (36188) Oct 28, 2009
Updated crate images based on submission from Noah
# 1.03.55 (36162) Oct 27, 2009
Made it so that horizontal chart bounds update when vertical scale is changed
forces-and-motion: Removed objects that cannot be moved, or cannot be delivered to the house.
forces-and-motion: Reduced robot moving company game applied force to match that in the ramp version.
Fixed: If you go to Playback mode, then pause and grab object, it should automatically clear the rest of recording and switch to playback mode.
Made it so the adjustable coordinate frame automatically moves with the ramp after snapping to it.
Added snap-to ramp angle and canonical axes for the adjustable coordinate frame
# 1.03.54 (36113) Oct 26, 2009
forces-and-motion: Zoomed in acceleration and velocity graphs by a factor of 2s. 
forces-and-motion: Changed Acceleration, Velocity, and Position graph labels so that e.g. "Acceleration=XXX m/s/s" is all on same line, now that sliders have been removed.
Fixed: When walls removed, the "Brick/Bouncy" control should grey out.
Fixed: Springs should not appear when walls are disabled.
Moved vector arrows in front of applied force slider.
forces-and-motion: Moved vector arrows in front of play area controls
forces-and-motion: Aligned the sliders for the friction controls in the 2nd tab.
Doubled the width of the hit region for the coordinate frame graphic to make it easier to grab with the mouse.
Made it so that Applied Force is indicated by chart slider during playback
Changed object's initial location on several tabs to prevent force arrow from being obscured by default
Moved mu_k above mu_s in the custom control panel to match tool tips
Made customizable crate height match non-customizable crate height when masses are equivalent