@@ -1,4 +1,5 @@
-> Major user interface redesign for the-ramp and forces-and-motion (replacing forces-1d) 
+Made it so that static friction coefficient is always less than or equal to the kinetic friction coefficient for custom objects. 
+> Major user interface redesign for the-ramp and forces-and-motion (which replaces forces-1d)
 Bugfix in specifying bounds in PNode.toImage call, improves compatibility with Piccolo 1.3
 # 1.03.56 (36188) Oct 28, 2009
 Updated crate images based on submission from Noah
